upload full workingOLMS Project

--- a/LibraryManagementSystem/appsettings.json
+++ b/LibraryManagementSystem/appsettings.json
@@ -1,15 +1,1 @@
-{
-  "ConnectionStrings": {
-    "DefaultConnection": "paste your connection"
-  },
-  "SendGrid": {
-    "ApiKey": "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"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+<h1>add your details</h1>
